<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#9DEEF8">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/navi_head_title"
        android:layout_marginBottom="10dip"
        android:textColor="@color/white"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/navi_head_administrators"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/navi_head_clear_supplement_currency"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/navi_head_checkout_information"
            android:textColor="@color/white"
            android:textSize="20sp"/>

    </LinearLayout>
</LinearLayout>